bin-privatebin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: privatebin
  labels:
    app: privatebin
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: privatebin
