bin-privatebin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: privatebin-ingress
  namespace: privatebin
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-2:183631321229:certificate/e3c3b64e-a238-47c4-8b2b-0930662dd8f2
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: bin.reborncloud.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: privatebin
                port:
                  number: 8080
